--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,20 @@ img {
   margin: 1.5rem;
   gap: 2rem;
 }
+
+.watchlist-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--green);
+  border-radius: 50%;
+  color: var(--green);
+  padding: 0.5rem;
+  height: 1.5rem;
+  width: 1.5rem !important;
+}
+
+.watchlist-icon-red {
+  border: 2px solid var(--red);
+  color: var(--red);
+}
